# lucid-svg

./: .gitignore  CHANGES.md  README.md  lucid-svg.cabal  stack.yaml
examples/: logo.hs  path.hs  simple.hs
src/Lucid/: Svg.hs
src/Lucid/Svg/: Attributes.hs  Core.hs  Elements.hs  Path.hs
utils/: attribute.py  attributes.hs  attributes.txt  element.py  elements.txt
