name:                lucid-svg
version:             0.7.0.0
synopsis:            DSL for composing SVG.
description:         Easy to write SVG.
homepage:            http://github.com/jeffreyrosenbluth/lucid-svg.git
license:             BSD3
license-file:        LICENSE
author:              Jeffrey Rosenbluth
maintainer:          jeffrey.rosenbluth@gmail.com
copyright:           2015 Jeffrey Rosenbluth
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -rtsopts -O2
  exposed-modules:     Lucid.Svg,
                       Lucid.Svg.Core,
                       Lucid.Svg.Path,
                       Lucid.Svg.Elements,
                       Lucid.Svg.Attributes
  build-depends:       base                  >= 4.5   && < 4.10,
                       blaze-builder         >= 0.4   && < 0.5,
                       bytestring            >= 0.10  && < 0.11,
                       hashable             >= 1.1   && < 1.3,
                       text                  >= 0.11  && < 1.3,
                       unordered-containers  >= 0.2 && < 0.2.7
  hs-source-dirs:      src
  default-language:    Haskell2010
